--- a/index.html
+++ b/index.html
@@ -20,6 +20,36 @@
     <title>Frontend Mentor | NFT preview card component</title>
 
     <link rel="stylesheet" href="output.css" />
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              // ### Primary
+
+              "Soft-blue": "hsl(215, 51%, 70%)",
+              "Cyan-logo": "hsl(178, 100%, 50%)",
+
+              // ### Neutral
+              // (main BG)
+              mainBG: "hsl(217, 54%, 11%)",
+
+              // (card BG)
+
+              cardBG: "hsl(216, 50%, 16%)",
+              // (line)
+              line: "hsl(215, 32%, 27%)",
+              White: "hsl(0, 0%, 100%)",
+            },
+            fontFamily: {
+              outfit: ["Outfit"],
+            },
+          },
+        },
+      };
+    </script>
   </head>
   <body class="w-full h-full bg-mainBG">
     <div class="flex items-center h-screen">
