--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <!-- ------main div----- -->
         <div class="pt-4 relative group">
           <img
-            src="../images/image-equilibrium.jpg"
+            src="./images/image-equilibrium.jpg"
             alt="equilibrium"
             class="w-[190px] h-[190px] rounded-lg mx-auto"
           />
           <img
-            src="../images/icon-view.svg"
+            src="./images/icon-view.svg"
             alt="eyes"
             class="absolute top-4 z-50 left-24 mx-auto my-20 w-8 h-8 opacity-0 group-hover:opacity-100"
           />
@@ -101,7 +101,7 @@
           <div class="flex gap-1 items-center">
             <span class="h-3 w-3">
               <!-- ---------time logo------ -->
-              <img src="../images/icon-clock.svg" alt="clock" />
+              <img src="./images/icon-clock.svg" alt="clock" />
             </span>
             <span class="text-Soft-blue tracking-normal">
               <!-- ---------time value------ -->
@@ -118,7 +118,7 @@
 
           <span class="rounded-full"
             ><img
-              src="../images/image-avatar.png"
+              src="./images/image-avatar.png"
               alt="avatar"
               class="w-5 h-5 border-white border-[1px] rounded-full"
           /></span>
