--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link
       rel="shortcut icon"
-      href="../images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
       type="image/x-icon"
     />
     <!-- displays site properly based on user's device -->
