--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="flex gap-1">
             <span class="h-2 w-2">
               <!-- ---------crypto logo------ -->
-              <img src="../images/icon-ethereum.svg" alt="logo" />
+              <img src="./images/icon-ethereum.svg" alt="logo" />
             </span>
             <span class="text-Cyan-logo">
               <!-- ---------crypto value------ -->
